Dynamic mesh generation implemented (no colors or textures yet)

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+/Content/__ExternalActors__/DebugLevel/8/68/CMDMWL5S3SMZVZ0SI0E0EV.uasset
