Editor module implemented

--- a/UnrealVoxel.uproject
+++ b/UnrealVoxel.uproject
@@ -17,6 +17,11 @@
 				"Engine",
 				"CoreUObject"
 			]
+		},
+		{
+			"Name": "VoxelEngineEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PostEngineInit"
 		}
 	],
 	"Plugins": [
