Texture atlas generator implemented

--- a/UnrealVoxel.uproject
+++ b/UnrealVoxel.uproject
@@ -21,7 +21,10 @@
 		{
 			"Name": "VoxelEngineEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
