Octree compilation fixed, VoxelEngineTest module added

--- a/UnrealVoxel.uproject
+++ b/UnrealVoxel.uproject
@@ -26,6 +26,15 @@
 				"Engine",
 				"CoreUObject"
 			]
+		},
+		{
+			"Name": "VoxelEngineTest",
+			"Type": "Editor",
+			"LoadingPhase": "PostEngineInit",
+			"AdditionalDependencies": [
+				"Engine",
+				"CoreUObject"
+			]
 		}
 	],
 	"Plugins": [
@@ -35,6 +44,22 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "FunctionalTestingEditor",
+			"Enabled": true
+		},
+		{
+			"Name": "AutomationDriverTests",
+			"Enabled": true
+		},
+		{
+			"Name": "EditorTests",
+			"Enabled": true
+		},
+		{
+			"Name": "TestFramework",
+			"Enabled": true
 		}
 	]
 }
